[package]
name = "rust-miniss"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A Rust implementation of miniss - a toy Seastar-like async runtime"
license = "MIT OR Apache-2.0"

[dependencies]
# Core async primitives
futures = "0.3"
pin-project-lite = "0.2"
pin-project = "1.1"

# Concurrency utilities
crossbeam = "0.8"
crossbeam-queue = "0.3"
once_cell = "1.19"
crossbeam-channel = "0.5"
dashmap = "5.5"

# System programming
nix = { version = "0.27", features = ["signal", "time", "sched", "fs"] }
libc = "0.2"
mio = { version = "0.8", features = ["os-poll", "net", "os-ext"] }

# I/O backends - focus on io-uring for Linux (Linux only)

# Buffer management
bytes = "1"

# Utilities
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
num_cpus = "1.16"
rand = "0.8"
signal-hook = "0.3"
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "signal", "io-util"] }


[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
tokio = { version = "1", features = ["full"] }
async-std = { version = "1.12", features = ["attributes"] }
tempfile = "3.8"
crc = "3.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[[example]]
name = "hello_world"

[[example]]
name = "task_builder_demo"

[[example]]
name = "http_echo"
path = "examples/http_echo.rs"

[[bin]]
name = "http_echo_tokio"
path = "bench_compare/http_echo_tokio.rs"

[[bench]]
name = "runtime_benchmarks"
harness = false

[[bench]]
name = "timer_benchmarks"
harness = false

[[bench]]
name = "cross_cpu_latency"
harness = false

[[bench]]
name = "scheduling_throughput"
harness = false

[features]
# Focus on io-uring backend for high performance
default = ["multicore", "io-uring"]
multicore = []
epoll = []
kqueue = []
io-uring = []
signal = []
timer = []

[profile.release]
lto = true
codegen-units = 1

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

