[package]
name = "rust-miniss-fuzz"
publish = false
version = "0.0.0"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
rust-miniss = { path = ".." }

[workspace]
members = ["."]

[[bin]]
name = "timer_api"
path = "fuzz_targets/timer_api.rs"
